--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 annotated-types==0.6.0
 anyio==4.3.0
 beautifulsoup4==4.12.3
-certifi==2024.2.2
+certifi==2023.11.17
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
@@ -19,6 +19,7 @@ Jinja2==3.1.3
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
+nba_api==1.4.1
 numpy==1.26.4
 orjson==3.10.3
 packaging==24.0
